fixing z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,6 +43,7 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
+  z-index: 1;
   border: none;
   width: 85%;
   display: none;
